--- a/App_Account/frmGlobalReplace.resx
+++ b/App_Account/frmGlobalReplace.resx
@@ -205,7 +205,7 @@
   <data name="tpKeywordReplace.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAApwAAAGGCAYAAADW7lHFAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vQAADr0BR/uQrQAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAP+NSURBVHhe7P3p
+        vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAP+NSURBVHhe7P3p
         l6TJdZ8JVmRW5Z5ZS1YVCgCppSmKUvdILbW6z8w5M/0HzOfmTuxLFVAo1IrCvhGUqH16znya6ZZm1BJF
         inthR6GwkViIjfyXfH7Pfe/P8r7m5h4ekRGFAmUfnnPNrl0ze90jIv1Je90j7vlP//ff2Uwmk8lkMplM
         JufFFM7JZDKZTCaTybkyhXMymUwmk8lkcq5M4ZxMJpPJZDKZnCtTOCeTyWQymUwm58oUzslkMplMJpPJ
@@ -2756,7 +2756,7 @@
   <data name="tpGeneratePDFByImages.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAApwAAAGGCAYAAADW7lHFAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vgAADr4B6kKxwAAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAP+NSURBVHhe7P3p
+        vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAP+NSURBVHhe7P3p
         l6TJdZ8JVmRW5Z5ZS1YVCgCppSmKUvdILbW6z8w5M/0HzOfmTuxLFVAo1IrCvhGUqH16znya6ZZm1BJF
         inthR6GwkViIjfyXfH7Pfe/P8r7m5h4ekRGFAmUfnnPNrl0ze90jIv1Je90j7vlP//ff2Uwmk8lkMplM
         JufFFM7JZDKZTCaTybkyhXMymUwmk8lkcq5M4ZxMJpPJZDKZnCtTOCeTyWQymUwm58oUzslkMplMJpPJ
@@ -5301,6 +5301,12 @@
         Fqg73dVZfI4eAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="lblProcess.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="pgbOutput.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="txtFolder.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -5333,6 +5339,9 @@
   </metadata>
   <metadata name="cmdClose.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
+  </metadata>
+  <metadata name="backgroundWorkerUI.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>415, 17</value>
   </metadata>
   <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
